force-app/main/default/objects/Case_Action__c/Case_Action__c.object-meta.xml
<CustomObject>
    <label>Case Action</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Case Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>