force-app/main/default/objects/Case_Action__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case #</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Actions</relationshipLabel>
    <relationshipName>Case_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>