force-app/main/default/objects/Case_Action__c/fields/Case_Action_Age_days__c.field-meta.xml
<CustomField>
    <fullName>Case_Action_Age_days__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Rejected&quot;), TODAY() -  DATEVALUE(CreatedDate), DATEVALUE(Resubmit_Date__c) - DATEVALUE(CreatedDate))</formula>
    <label>Case Action Age (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>