force-app/main/default/objects/Case_Action__c/fields/Inside_Sales_Name__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Sales Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Actions3</relationshipName>
    <type>Lookup</type>
</CustomField>