force-app/main/default/objects/Case_Action__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Case Actions</relationshipLabel>
    <relationshipName>Case_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>