force-app/main/default/objects/Case_Action__c/fields/Primary_Contract_Rejection_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contract_Rejection_Reason_Detail__c</fullName>
    <label>Primary Contract Rejection Reason Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>