force-app/main/default/objects/Case_Action__c/fields/Resubmit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resubmit_Comments__c</fullName>
    <label>Resubmit Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>