force-app/main/default/objects/Case_Action__c/fields/Resubmit_Date__c.field-meta.xml
<CustomField>
    <fullName>Resubmit_Date__c</fullName>
    <label>Resubmit Date</label>
    <type>DateTime</type>
</CustomField>