force-app/main/default/objects/Case_Action__c/fields/Sales_Support_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Support User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Actions1</relationshipName>
    <type>Lookup</type>
</CustomField>