force-app/main/default/objects/Case_Action__c/fields/Second_Contract_Reason_Rejection_Detail__c.field-meta.xml
<CustomField>
    <fullName>Second_Contract_Reason_Rejection_Detail__c</fullName>
    <label>Second Contract Reason Rejection Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>