force-app/main/default/objects/Case_Action__c/fields/Total_Case_Age_days__c.field-meta.xml
<CustomField>
    <fullName>Total_Case_Age_days__c</fullName>
    <formula>Case__r.Total_Case_Age_days__c</formula>
    <label>Total Case Age (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>