force-app/main/default/objects/Case_Action__c/fields/X2nd_Follow_up_Date1__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Follow_up_Date1__c</fullName>
    <label>2nd Follow up Date</label>
    <type>DateTime</type>
</CustomField>