force-app/main/default/objects/Case_Action__c/fields/X3rd_Follow_up_Date1__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Follow_up_Date1__c</fullName>
    <label>3rd Follow up Date</label>
    <type>DateTime</type>
</CustomField>