force-app/main/default/objects/Case_Action__c/validationRules/Reassign_Case_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Reassign_Case_Comments</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Case_Action_Assigned_To__c) &amp;&amp; ISBLANK(Reassign_Comments__c) &amp;&amp; (NOT(ISCHANGED(Reassign_Comments__c)))</errorConditionFormula>
    <errorDisplayField>Reassign_Comments__c</errorDisplayField>
    <errorMessage>Please add in new Reassign Comments in order to Reassign Case Action.</errorMessage>
</ValidationRule>