force-app/main/default/objects/Case_Action__c/validationRules/RestrictCaseActionUpdateWhenCaseisAccept.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictCaseActionUpdateWhenCaseisAccept</fullName>
    <active>true</active>
    <errorConditionFormula>AND
   ( 
    NOT(ISBLANK(Case__r.Date_Sent_to_Contracts_Admin__c)), 
    ISPICKVAL(Status__c,&apos;Resubmitted&apos;),
    ISCHANGED(Status__c),
    NOT(Primary_Contract_Rejection_Reason__c  = &apos;Autopay&apos;),
    NOT( Second_Contract_Rejection_Reason__c = &apos;Autopay&apos;)
  )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You cannot update the Status as the Contract Status on the Case has already been Accepted.</errorMessage>
</ValidationRule>