force-app/main/default/objects/Case_Action__c/validationRules/Resubmit_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Resubmit_Comments</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Resubmitted&quot;) &amp;&amp; ISBLANK(Resubmit_Comments__c)</errorConditionFormula>
    <errorDisplayField>Resubmit_Comments__c</errorDisplayField>
    <errorMessage>When moving the Status to Resubmitted, be sure to enter what you corrected which will be reviewed by the Contracts Representative</errorMessage>
</ValidationRule>